[gd_scene load_steps=82 format=2]

[ext_resource path="res://assets/sound/music/menu_track_secret.wav" type="AudioStream" id=1]
[ext_resource path="res://assets/sound/sfx/skills/skilled_frcer.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sound/music/track_tictac.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/sfx/gui/tutorial_stage_a_NFF-glocken-bad.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sound/sfx/skill_success_b_NFF-glocken-good.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/sfx/blinking/blink_static_1.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sound/sfx/blinking/blink_1.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sound/sfx/blinking/blink_static_6.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/sfx/skills/pull_stone_slide.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/sfx/gui/btn_cancel_NFF-home-switch-off.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sound/sfx/burst/burst.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/sound/sfx/burst/burst_cocking.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sound/sfx/blinking/blink_static_4.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sound/sfx/blinking/blink_static_5.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sound/music/inespy_veryshort_468226__inespy__chill-trap-beat-160-bpm.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sound/sfx/blinking/blink_static_3.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sound/sfx/gui/key_5.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sound/sfx/skills/teleport_out_v2.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/sound/sfx/blinking/blink_4.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/sound/sfx/skills/teleport_loop_v2.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/sound/sfx/blinking/blink_static_2.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/sound/sfx/events/countdown-a.ogg" type="AudioStream" id=22]
[ext_resource path="res://assets/sound/sfx/gui/btn_focus_change.wav" type="AudioStream" id=23]
[ext_resource path="res://sound_manager.gd" type="Script" id=24]
[ext_resource path="res://data_manager.gd" type="Script" id=25]
[ext_resource path="res://main.gd" type="Script" id=26]
[ext_resource path="res://assets/sound/sfx/blinking/blink_2.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/sound/sfx/gui/screen_slide.wav" type="AudioStream" id=28]
[ext_resource path="res://assets/sound/sfx/gui/key_1.wav" type="AudioStream" id=29]
[ext_resource path="res://assets/sound/sfx/skills/pull.wav" type="AudioStream" id=30]
[ext_resource path="res://assets/sound/sfx/gui/key_4.wav" type="AudioStream" id=31]
[ext_resource path="res://assets/sound/sfx/gui/key_3.wav" type="AudioStream" id=32]
[ext_resource path="res://assets/sound/sfx/burst/hit_wall_dizzy_NFF-dizzyness.wav" type="AudioStream" id=33]
[ext_resource path="res://assets/sound/sfx/gui/key_2.wav" type="AudioStream" id=34]
[ext_resource path="res://assets/sound/sfx/gui/btn_confirm_NFF-home-switch-on.wav" type="AudioStream" id=35]
[ext_resource path="res://assets/sound/sfx/burst/hit_wall.wav" type="AudioStream" id=36]
[ext_resource path="res://assets/sound/sfx/events/new_record_449069__ricniclas__fanfare.wav" type="AudioStream" id=37]
[ext_resource path="res://assets/sound/sfx/events/win_jingle_270528__littlerobotsoundfactory__jingle_win_00.wav" type="AudioStream" id=38]
[ext_resource path="res://assets/sound/sfx/blinking/blink_3.wav" type="AudioStream" id=39]
[ext_resource path="res://assets/sound/sfx/gui/menu_fade.wav" type="AudioStream" id=40]
[ext_resource path="res://assets/sound/music/menu_track_WarmUpShort.wav" type="AudioStream" id=41]
[ext_resource path="res://assets/sound/music/track_upbeat.wav" type="AudioStream" id=42]
[ext_resource path="res://assets/sound/music/moose.mp3" type="AudioStream" id=43]
[ext_resource path="res://assets/sound/sfx/burst/burs_stop_phaser.wav" type="AudioStream" id=44]
[ext_resource path="res://assets/sound/sfx/skills/skilled_tickle.wav" type="AudioStream" id=45]
[ext_resource path="res://assets/sound/music/Ludum Dare 30 - Track 3_menu_cut.wav" type="AudioStream" id=46]
[ext_resource path="res://assets/sound/sfx/burst/burst_laser_NFF-laser-gun.wav" type="AudioStream" id=47]
[ext_resource path="res://assets/sound/sfx/skills/teleport_in_v2.wav" type="AudioStream" id=48]
[ext_resource path="res://assets/sound/sfx/stepping/step_4.wav" type="AudioStream" id=49]
[ext_resource path="res://assets/sound/sfx/stepping/step_1.wav" type="AudioStream" id=51]
[ext_resource path="res://assets/sound/sfx/stepping/step_2.wav" type="AudioStream" id=52]
[ext_resource path="res://assets/sound/sfx/stepping/step_5.wav" type="AudioStream" id=53]
[ext_resource path="res://assets/sound/sfx/stepping/step_3.wav" type="AudioStream" id=55]
[ext_resource path="res://assets/sound/sfx/events/loose_jingle_GAMEOVER.wav" type="AudioStream" id=57]
[ext_resource path="res://assets/sound/sfx/last_beat.wav" type="AudioStream" id=58]
[ext_resource path="res://assets/sound/sfx/events/countdown-b.ogg" type="AudioStream" id=59]
[ext_resource path="res://assets/sound/sfx/skills/push_stone_slide.wav" type="AudioStream" id=60]
[ext_resource path="res://assets/sound/music/Patreon Goal Reward Loops - Track 08_loop.wav" type="AudioStream" id=61]
[ext_resource path="res://assets/sound/music/Ludum Dare 28 - Track 1_loop.wav" type="AudioStream" id=62]
[ext_resource path="res://assets/sound/sfx/burst/hit_stray_v2.wav" type="AudioStream" id=65]
[ext_resource path="res://assets/sound/music/457363__3m4__trap-beat-2.mp3" type="AudioStream" id=66]
[ext_resource path="res://assets/sound/music/POL-the-foyer-short.wav" type="AudioStream" id=68]
[ext_resource path="res://assets/sound/music/384468__frankum__vintage-elecro-pop-loop.mp3" type="AudioStream" id=69]
[ext_resource path="res://assets/sound/music/POL-impulses-short.wav" type="AudioStream" id=70]

[sub_resource type="AudioStreamRandomPitch" id=12]
audio_stream = ExtResource( 7 )

[sub_resource type="AudioStreamRandomPitch" id=13]
audio_stream = ExtResource( 27 )
random_pitch = 1.0

[sub_resource type="AudioStreamRandomPitch" id=14]
audio_stream = ExtResource( 39 )

[sub_resource type="AudioStreamRandomPitch" id=15]
audio_stream = ExtResource( 19 )

[sub_resource type="AudioStreamRandomPitch" id=6]
audio_stream = ExtResource( 6 )

[sub_resource type="AudioStreamRandomPitch" id=7]
audio_stream = ExtResource( 21 )

[sub_resource type="AudioStreamRandomPitch" id=8]
audio_stream = ExtResource( 16 )

[sub_resource type="AudioStreamRandomPitch" id=9]
audio_stream = ExtResource( 13 )

[sub_resource type="AudioStreamRandomPitch" id=10]
audio_stream = ExtResource( 14 )

[sub_resource type="AudioStreamRandomPitch" id=11]
audio_stream = ExtResource( 8 )

[sub_resource type="AudioStreamRandomPitch" id=24]
audio_stream = ExtResource( 11 )
random_pitch = 1.05

[sub_resource type="AudioStreamRandomPitch" id=34]
audio_stream = ExtResource( 30 )
random_pitch = 1.2

[sub_resource type="AudioStreamRandomPitch" id=33]
audio_stream = ExtResource( 45 )

[sub_resource type="AudioStreamRandomPitch" id=1]
audio_stream = ExtResource( 30 )
random_pitch = 1.2

[sub_resource type="AudioStreamRandomPitch" id=31]
audio_stream = ExtResource( 47 )
random_pitch = 1.2

[sub_resource type="AudioStreamRandomPitch" id=16]
audio_stream = ExtResource( 65 )

[sub_resource type="AudioStreamRandomPitch" id=17]
audio_stream = ExtResource( 36 )

[node name="Main" type="Node"]
script = ExtResource( 26 )

[node name="DataManager" type="Node" parent="."]
script = ExtResource( 25 )

[node name="Undi" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="SoundManager" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 24 )

[node name="GameSfx" type="Node2D" parent="SoundManager"]

[node name="Stepping" type="Node2D" parent="SoundManager/GameSfx"]

[node name="Step1" type="AudioStreamPlayer" parent="SoundManager/GameSfx/Stepping"]
stream = ExtResource( 51 )
volume_db = -10.0
pitch_scale = 1.1
bus = "GameSfx"

[node name="Step2" type="AudioStreamPlayer" parent="SoundManager/GameSfx/Stepping"]
stream = ExtResource( 52 )
volume_db = -10.0
pitch_scale = 1.1
bus = "GameSfx"

[node name="Step4" type="AudioStreamPlayer" parent="SoundManager/GameSfx/Stepping"]
stream = ExtResource( 49 )
volume_db = -10.0
pitch_scale = 1.1
bus = "GameSfx"

[node name="Step5" type="AudioStreamPlayer" parent="SoundManager/GameSfx/Stepping"]
stream = ExtResource( 53 )
volume_db = -10.0
pitch_scale = 1.1
bus = "GameSfx"

[node name="Step3" type="AudioStreamPlayer" parent="SoundManager/GameSfx/Stepping"]
stream = ExtResource( 55 )
volume_db = -10.0
pitch_scale = 1.1
bus = "GameSfx"

[node name="Blinking" type="Node2D" parent="SoundManager/GameSfx"]

[node name="Blink1" type="AudioStreamPlayer" parent="SoundManager/GameSfx/Blinking"]
stream = SubResource( 12 )
volume_db = -15.0
bus = "GameSfx"

[node name="Blink2" type="AudioStreamPlayer" parent="SoundManager/GameSfx/Blinking"]
stream = SubResource( 13 )
volume_db = -15.0
bus = "GameSfx"

[node name="Blink3" type="AudioStreamPlayer" parent="SoundManager/GameSfx/Blinking"]
stream = SubResource( 14 )
volume_db = -15.0
bus = "GameSfx"

[node name="Blink4_mute" type="AudioStreamPlayer" parent="SoundManager/GameSfx/Blinking"]
stream = SubResource( 15 )
volume_db = -80.0
bus = "GameSfx"

[node name="Blink5_mute" type="AudioStreamPlayer" parent="SoundManager/GameSfx/Blinking"]
stream = SubResource( 15 )
volume_db = -80.0
bus = "GameSfx"

[node name="Blink6_mute" type="AudioStreamPlayer" parent="SoundManager/GameSfx/Blinking"]
stream = SubResource( 15 )
volume_db = -80.0
bus = "GameSfx"

[node name="BlinkingStatic" type="Node2D" parent="SoundManager/GameSfx"]

[node name="BlinkStatic1" type="AudioStreamPlayer" parent="SoundManager/GameSfx/BlinkingStatic"]
stream = SubResource( 6 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="BlinkStatic2" type="AudioStreamPlayer" parent="SoundManager/GameSfx/BlinkingStatic"]
stream = SubResource( 7 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="BlinkStatic3" type="AudioStreamPlayer" parent="SoundManager/GameSfx/BlinkingStatic"]
stream = SubResource( 8 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="BlinkStatic4" type="AudioStreamPlayer" parent="SoundManager/GameSfx/BlinkingStatic"]
stream = SubResource( 9 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="BlinkStatic5" type="AudioStreamPlayer" parent="SoundManager/GameSfx/BlinkingStatic"]
stream = SubResource( 10 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="BlinkStatic6" type="AudioStreamPlayer" parent="SoundManager/GameSfx/BlinkingStatic"]
stream = SubResource( 11 )
pitch_scale = 1.2
bus = "GameSfx"

[node name="Burst" type="AudioStreamPlayer" parent="SoundManager/GameSfx"]
stream = SubResource( 24 )
volume_db = -10.0
bus = "GameSfx"

[node name="StraySlide" type="AudioStreamPlayer" parent="SoundManager/GameSfx"]
stream = SubResource( 34 )
volume_db = -25.0
pitch_scale = 0.8
bus = "GameSfx"

[node name="GuiSfx" type="Node2D" parent="SoundManager"]

[node name="Inputs" type="Node2D" parent="SoundManager/GuiSfx"]

[node name="Typing" type="Node2D" parent="SoundManager/GuiSfx/Inputs"]

[node name="Key1" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs/Typing"]
stream = ExtResource( 29 )
volume_db = -15.0
pitch_scale = 0.6

[node name="Key2" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs/Typing"]
stream = ExtResource( 34 )
volume_db = -15.0
pitch_scale = 0.6

[node name="Key3" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs/Typing"]
stream = ExtResource( 32 )
volume_db = -15.0
pitch_scale = 0.6

[node name="Key4" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs/Typing"]
stream = ExtResource( 31 )
volume_db = -15.0
pitch_scale = 0.6

[node name="Key5" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs/Typing"]
stream = ExtResource( 17 )
volume_db = -15.0
pitch_scale = 0.6

[node name="BtnFocus" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs"]
stream = ExtResource( 23 )
volume_db = -30.0
pitch_scale = 0.7
bus = "Gui"

[node name="BtnConfirm" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs"]
stream = ExtResource( 35 )
volume_db = -25.0
bus = "Gui"

[node name="BtnCancel" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Inputs"]
stream = ExtResource( 10 )
volume_db = -25.0
bus = "Gui"

[node name="Events" type="Node2D" parent="SoundManager/GuiSfx"]

[node name="Win" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 38 )
volume_db = -15.0
bus = "GameSfx"

[node name="Loose" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 57 )
volume_db = -5.0
bus = "GameSfx"

[node name="GameCoundownA" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 22 )
volume_db = -25.0
pitch_scale = 0.8
bus = "GameSfx"

[node name="GameCoundownB" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 59 )
volume_db = -15.0
pitch_scale = 0.7
bus = "GameSfx"

[node name="StartCoundownA" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 22 )
volume_db = -25.0
bus = "GameSfx"

[node name="StartCoundownB" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 59 )
volume_db = -15.0
bus = "GameSfx"

[node name="TutorialStageDone" type="AudioStreamPlayer" parent="SoundManager/GuiSfx/Events"]
stream = ExtResource( 4 )
volume_db = -13.0
pitch_scale = 1.1
bus = "Gui"

[node name="MenuFade" type="AudioStreamPlayer" parent="SoundManager/GuiSfx"]
stream = ExtResource( 40 )
volume_db = -15.0
pitch_scale = 0.93
bus = "Gui"

[node name="ScreenSlide" type="AudioStreamPlayer" parent="SoundManager/GuiSfx"]
stream = ExtResource( 28 )
pitch_scale = 0.9
bus = "Gui"

[node name="Music" type="Node2D" parent="SoundManager"]

[node name="MenuMusic" type="Node2D" parent="SoundManager/Music"]

[node name="WarmUpShort" type="AudioStreamPlayer" parent="SoundManager/Music/MenuMusic"]
stream = ExtResource( 41 )
volume_db = -5.0
bus = "Gui"

[node name="GameMusic" type="Node2D" parent="SoundManager/Music"]

[node name="Track8_5" type="AudioStreamPlayer" parent="SoundManager/Music/GameMusic"]
stream = ExtResource( 43 )
volume_db = -12.0
bus = "GameMusic"

[node name="Track12_5" type="AudioStreamPlayer" parent="SoundManager/Music/GameMusic"]
stream = ExtResource( 66 )
volume_db = -6.0
bus = "GameMusic"

[node name="Track4_4" type="AudioStreamPlayer" parent="SoundManager/Music/GameMusic"]
stream = ExtResource( 61 )
volume_db = -6.0
bus = "GameMusic"

[node name="Track1_3" type="AudioStreamPlayer" parent="SoundManager/Music/GameMusic"]
stream = ExtResource( 62 )
volume_db = -7.0
bus = "GameMusic"

[node name="Track5_3-4" type="AudioStreamPlayer" parent="SoundManager/Music/GameMusic"]
stream = ExtResource( 3 )
volume_db = -7.0
bus = "GameMusic"

[node name="Track6_3-4" type="AudioStreamPlayer" parent="SoundManager/Music/GameMusic"]
stream = ExtResource( 42 )
volume_db = -10.0
bus = "GameMusic"

[node name="Track19_4" type="AudioStreamPlayer" parent="SoundManager/Music/GameMusic"]
stream = ExtResource( 68 )
volume_db = -5.0
bus = "GameMusic"

[node name="_rezerva" type="Node2D" parent="SoundManager"]

[node name="Track7_menu" type="AudioStreamPlayer" parent="SoundManager/_rezerva"]
stream = ExtResource( 1 )
volume_db = -18.0

[node name="_Track11_4" type="AudioStreamPlayer" parent="SoundManager/_rezerva"]
stream = ExtResource( 69 )
volume_db = -10.0

[node name="_Track13_4" type="AudioStreamPlayer" parent="SoundManager/_rezerva"]
stream = ExtResource( 15 )
volume_db = -16.0

[node name="_Track17_4" type="AudioStreamPlayer" parent="SoundManager/_rezerva"]
stream = ExtResource( 70 )
volume_db = -15.0

[node name="SkillSuccessA" type="AudioStreamPlayer" parent="SoundManager/_rezerva"]
stream = ExtResource( 4 )
volume_db = -20.0
pitch_scale = 1.1

[node name="SkillSuccessB" type="AudioStreamPlayer" parent="SoundManager/_rezerva"]
stream = ExtResource( 5 )
volume_db = -20.0
pitch_scale = 1.1

[node name="SkilledCrystal" type="AudioStreamPlayer" parent="SoundManager/_rezerva"]
stream = SubResource( 33 )
volume_db = -25.0

[node name="LudumDare30-Track3_menu" type="AudioStreamPlayer" parent="SoundManager/_rezerva"]
stream = ExtResource( 46 )
bus = "Gui"

[node name="RecordFanfare" type="AudioStreamPlayer" parent="SoundManager/_rezerva"]
stream = ExtResource( 37 )
volume_db = -10.0
pitch_scale = 1.1
bus = "GameSfx"

[node name="_obst" type="Node2D" parent="SoundManager"]

[node name="Heartbeat" type="AudioStreamPlayer" parent="SoundManager/_obst"]
stream = ExtResource( 58 )
pitch_scale = 1.1
bus = "GameSfx"

[node name="Skills" type="Node2D" parent="SoundManager/_obst"]

[node name="TeleportIn" type="AudioStreamPlayer" parent="SoundManager/_obst/Skills"]
stream = ExtResource( 48 )
volume_db = -10.0
bus = "GameSfx"

[node name="TeleportLoop" type="AudioStreamPlayer" parent="SoundManager/_obst/Skills"]
stream = ExtResource( 20 )
volume_db = -10.0
bus = "GameSfx"

[node name="TeleportOut" type="AudioStreamPlayer" parent="SoundManager/_obst/Skills"]
stream = ExtResource( 18 )
volume_db = -10.0
bus = "GameSfx"

[node name="PushPull" type="AudioStreamPlayer" parent="SoundManager/_obst/Skills"]
stream = SubResource( 1 )
volume_db = -10.0
bus = "GameSfx"

[node name="PushedPulled" type="AudioStreamPlayer" parent="SoundManager/_obst/Skills"]
stream = SubResource( 1 )
volume_db = -5.0
pitch_scale = 0.7
bus = "GameSfx"

[node name="PushStoneSlide" type="AudioStreamPlayer" parent="SoundManager/_obst/Skills"]
stream = ExtResource( 60 )
volume_db = -15.0
bus = "GameSfx"

[node name="PullStoneSlide" type="AudioStreamPlayer" parent="SoundManager/_obst/Skills"]
stream = ExtResource( 9 )
volume_db = -5.0
bus = "GameSfx"

[node name="SkilledStatic" type="AudioStreamPlayer" parent="SoundManager/_obst/Skills"]
stream = ExtResource( 2 )
volume_db = -25.0
bus = "GameSfx"

[node name="Burst" type="Node2D" parent="SoundManager/_obst"]

[node name="BurstLaser" type="AudioStreamPlayer" parent="SoundManager/_obst/Burst"]
stream = SubResource( 31 )
volume_db = -30.0
pitch_scale = 0.8
bus = "GameSfx"

[node name="BurstStop" type="AudioStreamPlayer" parent="SoundManager/_obst/Burst"]
stream = ExtResource( 44 )
volume_db = 10.0
bus = "GameSfx"

[node name="BurstCocking" type="AudioStreamPlayer" parent="SoundManager/_obst/Burst"]
stream = ExtResource( 12 )
volume_db = -15.0
bus = "GameSfx"

[node name="HitStray" type="AudioStreamPlayer" parent="SoundManager/_obst/Burst"]
stream = SubResource( 16 )
volume_db = -5.0
pitch_scale = 0.9
bus = "GameSfx"

[node name="HitWall" type="AudioStreamPlayer" parent="SoundManager/_obst/Burst"]
stream = SubResource( 17 )
volume_db = -7.0
pitch_scale = 0.9
bus = "GameSfx"

[node name="HitDizzy" type="AudioStreamPlayer" parent="SoundManager/_obst/Burst"]
stream = ExtResource( 33 )
volume_db = -20.0
bus = "GameSfx"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SoundManager"]
